<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_menu_principal_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background01"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.michaelsinner.sabergo.Activities.MenuPrincipalAdmin"
    tools:showIn="@layout/app_bar_menu_principal_admin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txSaberGo"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:id="@+id/tvTitulo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txMenuPrincipal"
        android:id="@+id/tvMenuPrincipal"
        android:textColor="#23afca"
        android:layout_below="@+id/tvTitulo"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txModificarAdministrador"
        android:id="@+id/btnModificarAdmin"
        android:layout_marginTop="91dp"
        android:layout_below="@+id/tvMenuPrincipal"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txModificarPreguntas"
        android:id="@+id/btnModificarPreguntas"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btnModificarAlumnos"
        android:layout_alignStart="@+id/btnModificarAlumnos" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtxModificarAlumnos"
        android:id="@+id/btnModificarAlumnos"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btnModificarAdmin"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
