<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background05"
    tools:context="com.example.michaelsinner.trainingicfes.MenuPreguntas">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/titulo"
        android:textColor="#a23250bc"
        android:textSize="40dp"
        android:id="@+id/tvTitulo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txTituloMenuPreguntas"
        android:id="@+id/txtViewMenu"
        android:layout_below="@+id/tvTitulo"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txAgregarPregunta"
        android:id="@+id/btnAgregarPreguntas"
        android:layout_below="@+id/txtViewMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txEliminarPregunta"
        android:id="@+id/btnEliminarPreguntas"
        android:layout_below="@+id/btnAgregarPreguntas"
        android:layout_alignStart="@+id/btnAgregarPreguntas" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txEditarPregunta"
        android:id="@+id/btnEditarPreguntas"
        android:layout_below="@+id/btnEliminarPreguntas"
        android:layout_alignStart="@+id/btnEliminarPreguntas"
        android:layout_marginTop="27dp"
        android:layout_alignEnd="@+id/btnEliminarPreguntas" />


</RelativeLayout>
