<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#237fca"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.michaelsinner.sabergo.Activities.DetailsAdmin">

    <TextView
        android:text="@string/txSubEditAdmin"
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvSubEditAdmin" />

    <TextView
        android:text="@string/txNombreAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSubEditAdmin"
        android:textSize="15dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/tvNombreAdminEdit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="#ffffff"
        android:paddingTop="15dp"
        android:ems="10"
        android:id="@+id/etNombreAdminEdit"
        android:layout_below="@+id/tvNombreAdminEdit"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/tvSubEditAdmin" />

    <TextView
        android:text="@string/txColegioAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@+id/etNombreAdminEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/tvColegioAdminEdit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:background="#ffffff"
        android:paddingTop="15dp"
        android:layout_below="@+id/tvColegioAdminEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/etColegioAdminEdit"
        android:layout_alignEnd="@+id/etNombreAdminEdit" />

    <TextView
        android:text="@string/txUsuarioAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@+id/etColegioAdminEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/tvUserAdminEdit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:background="#ffffff"
        android:paddingTop="15dp"
        android:layout_below="@+id/tvUserAdminEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/etUserAdminEdit"
        android:layout_alignEnd="@+id/etColegioAdminEdit" />

    <TextView
        android:text="@string/txContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@+id/etUserAdminEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/tvContraseñaAdminEdit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:background="#ffffff"
        android:paddingTop="15dp"
        android:layout_below="@+id/tvContraseñaAdminEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/etContraseñaAdminEdit"
        android:layout_alignEnd="@+id/etUserAdminEdit" />

    <TextView
        android:text="@string/txCorreoAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@+id/etContraseñaAdminEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/tvCorreoAdminEdit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:background="#ffffff"
        android:paddingTop="15dp"
        android:layout_below="@+id/tvCorreoAdminEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/etCorreoAdminEdit"
        android:layout_alignEnd="@+id/etContraseñaAdmin" />

    <Button
        android:text="@string/txBtnActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/btnEditarAdmin"
        android:layout_below="@+id/etCorreoAdminEdit"
        android:layout_alignEnd="@+id/tvCorreoAdminEdit" />

    <Button
        android:text="@string/txBtnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:id="@+id/btnEliminarAdmin"
        android:layout_alignBaseline="@+id/btnEditarAdmin"
        android:layout_alignBottom="@+id/btnEditarAdmin"
        android:layout_toEndOf="@+id/etContraseñaAdminEdit" />


</RelativeLayout>
