<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details_alumno"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#237fca"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.michaelsinner.sabergo.Activities.DetailsAlumno">

    <TextView
        android:text="@string/txSubEditAlumnos"
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvSubEditAlumno"/>

    <TextView
        android:text="@string/txNombreAlumnoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSubEditAlumno"
        android:textSize="15dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/tvNombreAlumnoEdit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="#ffffff"
        android:paddingTop="15dp"
        android:ems="10"
        android:id="@+id/etNombreAlumnoEdit"
        android:layout_below="@+id/tvNombreAlumnoEdit"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/tvSubEditAlumno" />

    <TextView
        android:text="@string/txColegioAlumnoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@+id/etNombreAlumnoEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/tvColegioAlumnoEdit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:background="#ffffff"
        android:paddingTop="15dp"
        android:layout_below="@+id/tvColegioAlumnoEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/etColegioAlumnoEdit"
        android:layout_alignEnd="@+id/etNombreAlumnoEdit" />

    <TextView
        android:text="@string/txUsuarioAlumnoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@+id/etColegioAlumnoEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/tvUserAlumnoEdit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:background="#ffffff"
        android:paddingTop="15dp"
        android:layout_below="@+id/tvUserAlumnoEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/etUserAlumnoEdit"
        android:layout_alignEnd="@+id/etColegioAlumnoEdit" />

    <TextView
        android:text="@string/txPasswordAlumnoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@+id/etUserAlumnoEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/tvContraseñaAlumnoEdit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:background="#ffffff"
        android:paddingTop="15dp"
        android:layout_below="@+id/tvContraseñaAlumnoEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/etContraseñaAlumnoEdit"
        android:layout_alignEnd="@+id/etUserAlumnoEdit" />

    <TextView
        android:text="@string/txCorreoAlumnoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@+id/etContraseñaAlumnoEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/tvCorreoAlumnoEdit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:background="#ffffff"
        android:paddingTop="15dp"
        android:layout_below="@+id/tvCorreoAlumnoEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/etCorreoAlumnoEdit"
        android:layout_alignEnd="@+id/etContraseñaAlumnoEdit" />

    <Button
        android:text="@string/txBtnActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/btnEditarAlumno"
        android:layout_below="@+id/etCorreoAlumnoEdit"
        android:layout_alignEnd="@+id/tvNombreAlumnoEdit" />

    <Button
        android:text="@string/txBtnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:id="@+id/btnEliminarAdmin"
        android:layout_toEndOf="@+id/etContraseñaAlumnoEdit"
        android:layout_alignBottom="@+id/btnEditarAlumno" />


</RelativeLayout>
