<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_estudiante"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background05"
    tools:context="com.example.michaelsinner.trainingicfes.MenuEstudiante">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/titulo"
        android:textColor="#a23250bc"
        android:textSize="40dp"
        android:id="@+id/tvTitulo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txTituloMenuEstudiantes"
        android:id="@+id/tvTituloEstudiantes"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txAgregarEstudiante"
        android:id="@+id/btnAgregarEstudiante"
        android:layout_below="@+id/tvTituloEstudiantes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txEliminarEstudiantes"
        android:id="@+id/btnEliminarEstudiante"
        android:layout_below="@+id/btnEditarEstudiante"
        android:layout_alignStart="@+id/btnEditarEstudiante"
        android:layout_marginTop="27dp"
        android:layout_alignEnd="@+id/btnEditarEstudiante" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txEditarEstudiante"
        android:id="@+id/btnEditarEstudiante"
        android:layout_below="@+id/btnAgregarEstudiante"
        android:layout_alignEnd="@+id/tvTituloEstudiantes"
        android:layout_marginTop="17dp"
        android:layout_alignStart="@+id/btnAgregarEstudiante" />


</RelativeLayout>
